objects/AWS_Credential__mdt.object
<CustomObject>
    <description>Credentials for S3 access</description>
    <fields>
        <fullName>Access_Key__c</fullName>
        <description>Stores the access key for accessing S3</description>
        <label>Access Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bucket_Name__c</fullName>
        <description>The name of the bucket the credentials are to be used to access.</description>
        <label>Bucket Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Testing_Bucket_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the bucket name being accessed is for testing purposes or production.</description>
        <inlineHelpText>Check if the bucket being accessed is for testing purposes only.</inlineHelpText>
        <label>Is Testing Bucket Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secret_Key__c</fullName>
        <description>Holds the secret key for accessing S3</description>
        <label>Secret Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>AWS Credential</label>
    <pluralLabel>AWS Credentials</pluralLabel>
</CustomObject>